modificato package.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "Altravia/OpenApi",
-    "description": "My first Composer project",
+    "description": "Librerie OpenApi PHP (https://openapi.it)",
     "authors": [
         {
             "name": "Altravia",
