modificato il package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Altravia/OpenApi",
+    "name": "openapi/openapi",
     "description": "Librerie OpenApi PHP (https://openapi.it)",
     "authors": [
         {
