--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         }
     },
     "require-dev": {
-        "symfony/dotenv": "^5.3"
+        "symfony/dotenv": "^5.3",
+        "phpunit/phpunit": "^9.5"
     }
 }
